# tentaclio-databricks

./: Makefile  README.md  pyproject.toml
.circleci/: config.yml
src/tentaclio_databricks/clients/: databricks_client.py
tests/unit/clients/: test_databricks_client.py
